feat(my_cv) adding email link

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -45,7 +45,9 @@
    }
    &__subtitle {
     font-size: 19px;
-    color: darkgray
+    color: darkgray;
+    text-decoration: none;
+    cursor: pointer;
    }
 }
 
